Tue Aug 11 17:29:31 UTC 2009  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Fixed the deadlock situation that the deliver sample thread
          (reactor thread) recursively acquires writers_lock_ read
          lock while there is a waiting writer from add_associations
          thread(orb thread) that acquires write lock. This was achieved
          by allocating WriterInfo on heap and writers_ map maintains
          the WriterInfo pointer so the received_activity() can be moved
          out of the writers_lock_ scope in writer_activity() and the 
          WriterInfo internal state can be updated on single copy.

Tue Aug 11 15:30:42 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/DestinationOrder/main.cpp:

          Dropped unused local (caused scoreboard warnings).

Tue Aug 11 04:42:34 UTC 2009  Yan Dai  <dai_y@yahoo.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/Qos_Helper.inl:

          Added support of MANUAL_BY_PARTICIPANT_LIVELINESS_QOS
          and MANUAL_BY_TOPIC_LIVELINESS_QOS.

          - Disabled automatic liveliness assertion for new
            supported liveliness kind.
          - Implemented assert_liveliness() for DomainParticipantImpl
            and DataWriterImpl.
          - Made DataWriterImpl::send_liveliness return status
            code.
          - Fixed the bugs in DataReader and DataWriter that non-zero
            lease duration should be calculated when nanosec is not
            infite as well.

        * tests/DCPS/ManualAssertLiveliness/DataReaderListener.h:
        * tests/DCPS/ManualAssertLiveliness/DataReaderListener.cpp:
        * tests/DCPS/ManualAssertLiveliness/ManualAssertLiveliness.mpc: